# telegram_agent_job_notifyer

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  rustfmt.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
client/: Cargo.toml  README.md
client/src/: lib.rs  main.rs
server/: Cargo.toml  README.md
server/src/: main.rs
