[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Client for sending job notifications"
repository = "https://github.com/kuqmua/telegram-agent-job-notifyer"
readme = "README.md"
keywords = ["telegram", "notification", "client"]
categories = ["web-programming::http-client"]

[lib]
name = "client"
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
