[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Server application"
repository = "https://github.com/user/repo"
readme = "README.md"
keywords = ["server"]
categories = ["web-programming"]

[lints]
workspace = true
[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
