[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Server for telegram agent job notifyer"
repository = "https://github.com/kuqmua/telegram-agent-job-notifyer"
readme = "README.md"
keywords = ["telegram", "server", "webhook"]
categories = ["web-programming::http-server"]

[lints]
workspace = true
[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
